--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/unit",
     "test:integration": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/integration",
     "test:e2e": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/e2e",
+    "test:vitest": "vitest",
+    "test:vitest:watch": "vitest --watch",
+    "test:vitest:coverage": "vitest --coverage",
+    "test:vitest:ui": "vitest --ui",
     "dev": "npx http-server -p 3000 -c-1"
   },
   "dependencies": {
@@ -22,10 +26,14 @@
     "@babel/preset-env": "^7.27.2",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "babel-jest": "^30.0.0-beta.3",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.1.0",
+    "vitest": "^3.2.4"
   },
   "jest": {
     "transform": {
