--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "generate-icons": "node generate-icons.js",
     "start": "npx http-server -p 3000",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/unit",
-    "test:integration": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/integration",
-    "test:e2e": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/e2e",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:unit": "vitest test/unit",
+    "test:integration": "vitest test/integration",
+    "test:e2e": "vitest test/e2e",
     "test:vitest": "vitest",
     "test:vitest:watch": "vitest --watch",
     "test:vitest:coverage": "vitest --coverage",
