--- a/package.json
+++ b/package.json
@@ -12,51 +12,19 @@
     "test:unit": "vitest test/unit",
     "test:integration": "vitest test/integration",
     "test:e2e": "vitest test/e2e",
-    "test:vitest": "vitest",
-    "test:vitest:watch": "vitest --watch",
-    "test:vitest:coverage": "vitest --coverage",
-    "test:vitest:ui": "vitest --ui",
+    "test:ui": "vitest --ui",
     "dev": "npx http-server -p 3000 -c-1"
   },
   "dependencies": {
     "sharp": "^0.33.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "babel-jest": "^30.0.0-beta.3",
     "http-server": "^14.1.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.1.0",
     "vitest": "^3.2.4"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    },
-    "testEnvironment": "jsdom",
-    "collectCoverageFrom": [
-      "*.js",
-      "utils/**/*.js",
-      "!**/node_modules/**",
-      "!**/coverage/**"
-    ],
-    "coverageDirectory": "coverage",
-    "coverageReporters": [
-      "text",
-      "lcov",
-      "html"
-    ],
-    "testMatch": [
-      "**/test/**/*.test.js"
-    ],
-    "moduleNameMapper": {
-      "^(\\.{1,2}/.*)\\.js$": "$1"
-    }
   }
 }
