--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "test:integration": "vitest test/integration",
     "test:e2e": "vitest test/e2e",
     "test:ui": "vitest --ui",
-    "dev": "npx http-server -p 3000 -c-1"
+    "dev": "npx http-server -p 3000 -c-1",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix"
   },
   "dependencies": {
-    "sharp": "^0.33.2"
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
-    "@testing-library/dom": "^9.3.4",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "eslint": "^9.29.0",
+    "eslint-plugin-jsdoc": "^51.2.3",
     "http-server": "^14.1.1",
     "jsdom": "^26.1.0",
     "vitest": "^3.2.4"
