Prepare repository for publication
- Add MIT LICENSE
- Add project gitignore rules
- Add further details to package.json

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,20 @@ coverage/
 
 # Temporary files
 *.tmp
-*.temp 
+*.temp
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Local SSL certificates
+~/.localhost-ssl/
+
+# Editor backup files
+*~
+*.bak
+*.backup
+
+# Local development files
+.local/ 
