--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#1a1a1a",
+    "theme_color": "#3b82f6",
     "icons": [
         {
             "src": "icon-192.png",
