feat: add GitHub Actions deployment and PWA improvements
- Add GitHub Actions workflow for automated deployment to GitHub Pages
- Configure service worker with relative paths for better PWA compatibility
- Add deployment documentation and predeploy scripts
- Update package.json with deployment-related scripts and dependencies
- Add .nojekyll file for GitHub Pages compatibility
- Update .gitignore to exclude deployment artifacts
- Add package-lock.json for dependency locking
- Update README with deployment information
- Configure ESLint for deployment environment
- Update manifest.json for better PWA integration

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "40K Army Cleaner",
     "short_name": "40K Cleaner",
     "description": "Clean your Warhammer 40K army rosters",
-    "start_url": "/",
+    "start_url": "./",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#3b82f6",
