Update the name of the app to W40K Roster Cleaner

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "40K Army Cleaner",
+    "name": "W40K Roster Cleaner",
     "short_name": "40K Cleaner",
     "description": "Clean your Warhammer 40K army rosters",
     "start_url": "./",
