--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,20 @@
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#3b82f6",
+    "orientation": "portrait",
+    "scope": "./",
     "icons": [
         {
-            "src": "icon-192.png",
+            "src": "icons/pwa_icon_192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
-            "src": "icon-512.png",
+            "src": "icons/pwa_icon_512x512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 } 
