--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,13 +38,16 @@ jobs:
     - name: Run linting
       run: npm run lint
       
+    - name: Build with Vite
+      run: npm run build
+      
     - name: Setup Pages
       uses: actions/configure-pages@v4
       
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: '.'
+        path: './dist'
 
   deploy:
     environment:
